--- a/cartView/src/app/tabs/tabs.page.html
+++ b/cartView/src/app/tabs/tabs.page.html
@@ -1,10 +1,10 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <!-- <ion-tab-button tab="tab1">
       <ion-icon name="flash"></ion-icon>
       <ion-label>智慧经分</ion-label>
-    </ion-tab-button>
+    </ion-tab-button> -->
 
     <ion-tab-button tab="tab2">
       <ion-icon name="apps"></ion-icon>
